    "Unstable" library.
- API: new wrapper class "cmtk::HashMapSTL" hides the various STL hash map
    implementations and also adds support for upcoming standard unordered_map
    class.

- Added: source tree now incorporates minimal subset of DCMTK files so we can
    build DICOM support without external dependencies. [not functional yet]

- Testing: support for automated memory testing using valgrind etc.
- Testing: added test for multi-channel affine registration using histograms

- Fixed: some uninitialized data situations
- Fixed: incomplete computation when using "--sempling-density" option of
    "congeal" tool.
- Fixed: Slicer can now detect CMTK tools as plugins via their response to
    "--xml"; note that the XML description itself is not fully correct and
    functional yet.

- Improved: eliminated explicit offset calculations in cmtk::DataGrid and use
    existing index-to-offset function instead.

- Testing: added an experimental build with valgrind/memcheck memory checking
    to discover further issues with uninitialized data etc.

Release CMTK-1.0.1 (2009-06-25):

- API: changed XformList::Apply to XformList::ApplyInPlace

- Build: added missing applications "regress" and "probe_xform" to default
    build again.

- Changed: probe_xform tool now uses different command line semantics. All
    transformations are concatenated rather than applied separately.

- Added: normal vector of InfinitePlane can now be set directly.
- Added: "sympl" tool can now use different approximated symmetry plane
    orientations to begin search, supporting non-sagittal symmetry planes
    [Tracker #3834].
- Added: established infrastructure for optional algorithm validation,
    beginning with rigid registration. All validation tools must be activated
    via the "BUILD_VALIDATION" option of the top-level CMakeLists.txt file
- Added: tools for rigid registration validation using data from the
    Retrospective Image Registration Evaluation project.